--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/azure.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/azure.css
@@ -21,6 +21,9 @@
 	background-color:#7a7a7a;
 	padding:10px;
 }
+.ca_category {
+	color:purple;
+}
 input.appButtons {
 	margin:0px;
 }
@@ -69,6 +72,8 @@ input[type=checkbox] {
 }
 .topRightLinks {
 	padding-left:15px; 
+	color:black;
+	font-weight:bold;
 }
 .appIcons {
 	font-size:25px;
@@ -100,6 +105,7 @@ input[type=checkbox] {
 }
 .donateLink {
 	color:lightblue;
+	font-weight:bold;
 }
 .dockerHubStar {
 	color: magenta;
