--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/black.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/black.css
@@ -21,7 +21,9 @@
 	padding:10px;
 	color:black;
 }
-
+.ca_category {
+	color:purple;
+}
 input.appButtons {
 	margin:0px;
 }
@@ -70,6 +72,7 @@ input[type=checkbox] {
 }
 .topRightLinks {
 	padding-left:15px; 
+	font-weight:bold;
 }
 .appIcons {
 	font-size:25px;
@@ -101,6 +104,7 @@ input[type=checkbox] {
 }
 .donateLink {
 	color:#28a39d;
+	font-weight:bold;
 }
 .dockerHubStar {
 	color: magenta;
