check point build

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/azure.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/azure.css
@@ -3,7 +3,7 @@
 	width:180px;
 	float:left;
 	display:inline-block;
-	background-color:#303030;
+	background: linear-gradient(to bottom right,#e2e4e2,#303030);
 	margin:0px;
 	height:290px;
 	padding-top:10px;
@@ -18,11 +18,20 @@
 	float:left; 
 	overflow:auto; 
 	height:280px;
-	background-color:#7a7a7a;
+	background: linear-gradient(to bottom right,#7a7a7a,#e2e4e2);
 	padding:10px;
 }
 .ca_category {
 	color:purple;
+}
+.ca_author {
+	color:gray;
+	font-weight:bold;
+	cursor:pointer;
+}
+.ca_highlight {
+	color:#1e6d18;
+	font-weight:bold;
 }
 input.appButtons {
 	margin:0px;
@@ -77,7 +86,8 @@ input[type=checkbox] {
 }
 .appIcons {
 	font-size:25px;
-	color:blue;
+	color:#1c6343;
+	font-weight:bold;
 }
 .myReadmore {
 	text-align:center
@@ -95,16 +105,19 @@ input[type=checkbox] {
 	width:48px;
 }
 .supportLink { 
-	color:blue;
+	color:purple;
+	font-weight:bold;
 }
 .projectLink { 
-	color:blue; 
+	color:purple; 
+	font-weight:bold;
 }
 .webLink { 
-	color:blue;
+	color:purple;
+	font-weight:bold;
 }
 .donateLink {
-	color:lightblue;
+	color:black;
 	font-weight:bold;
 }
 .dockerHubStar {
@@ -129,4 +142,10 @@ input[type=checkbox] {
 	color:red;
 	font-size:15px;
 	cursor:pointer;
+}
+.ca_fa-delete {
+	color:#c70404;
+	font-size:20px;
+	position:relative;
+	top:2px;
 }
