--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/gray.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/gray.css
@@ -3,7 +3,7 @@
 	width:180px;
 	float:left;
 	display:inline-block;
-	background-color:#505050;
+	background: linear-gradient(to bottom right,#1B1D1B,#505050);
 	margin:0px;
 	height:290px;
 	padding-top:10px;
@@ -18,11 +18,20 @@
 	float:left;
 	overflow:auto; 
 	height:280px;
-	background-color:white;
+	background: linear-gradient(to bottom right,white,#1B1D1B);
 	padding:10px;
 }
 .ca_category {
 	color:purple;
+}
+.ca_author {
+	color:gray;
+	font-weight:bold;
+	cursor:pointer;
+}
+.ca_highlight {
+	color:#1e6d18;
+	font-weight:bold;
 }
 input.appButtons {
 	margin:0px;
@@ -76,7 +85,7 @@ input[type=checkbox] {
 }
 .appIcons {
 	font-size:25px;
-	color:blue;
+	color:#1c6343;
 }
 .myReadmore {
 	text-align:center
@@ -94,16 +103,19 @@ input[type=checkbox] {
 	width:48px;
 }
 .supportLink { 
-	color:blue;
+	color:purple;
+	font-weight:bold;
 }
 .projectLink { 
-	color:blue; 
+	color:purple;
+	font-weight:bold;
 }
 .webLink { 
-	color:blue;
+	color:purple;
+	font-weight:bold;
 }
 .donateLink {
-	color:#151733;
+	color:black;
 	font-weight:bold;
 }
 .dockerHubStar {
@@ -125,7 +137,13 @@ input[type=checkbox] {
 	cursor:pointer;
 }
 .newApp {
-	color:#820101;
+	color:red;
 	font-size:15px;
 	cursor:pointer;
+}
+.ca_fa-delete {
+	color:#c70404;
+	font-size:20px;
+	position:relative;
+	top:2px;
 }
