--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/black.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/black.css
@@ -2,7 +2,7 @@
 	width:180px;
 	float:left;
 	display:inline-block;
-	background-color:#303030;
+	background: linear-gradient(to bottom right,black,#303030);
 	margin:0px;
 	height:290px;
 	padding-top:10px;
@@ -17,12 +17,21 @@
 	float:left; 
 	overflow:auto; 
 	height:280px;
-	background-color:#cccccc;
+	background: linear-gradient(to bottom right,#cccccc,black);
 	padding:10px;
 	color:black;
 }
 .ca_category {
 	color:purple;
+}
+.ca_author {
+	color:gray;
+	font-weight:bold;
+	cursor:pointer;
+}
+.ca_highlight {
+	color:#1e6d18;
+	font-weight:bold;
 }
 input.appButtons {
 	margin:0px;
@@ -76,7 +85,7 @@ input[type=checkbox] {
 }
 .appIcons {
 	font-size:25px;
-	color:blue;
+	color:#1c6343;
 }
 .myReadmore {
 	text-align:center
@@ -94,16 +103,19 @@ input[type=checkbox] {
 	width:48px;
 }
 .supportLink { 
-	color:blue;
+	color:white; 
+	font-weight:bold;
 }
 .projectLink { 
-	color:blue; 
+	color:white; 
+	font-weight:bold; 
 }
 .webLink { 
-	color:blue;
+	color:white; 
+	font-weight:bold;
 }
 .donateLink {
-	color:#28a39d;
+	color:black;
 	font-weight:bold;
 }
 .dockerHubStar {
@@ -128,4 +140,10 @@ input[type=checkbox] {
 	color:red;
 	font-size:15px;
 	cursor:pointer;
+}
+.ca_fa-delete {
+	color:#c70404;
+	font-size:20px;
+	position:relative;
+	top:2px;	
 }
