Support Odd/Even css for template entries
Doubt I'll implement it in a skin though

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/black.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/black.css
@@ -20,6 +20,7 @@
 	background: linear-gradient(to bottom right,#cccccc,black);
 	padding:10px;
 	color:black;
+	font-weight:bold;
 }
 .ca_category {
 	color:purple;
