--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/gray.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/gray.css
@@ -1,33 +1,40 @@
 .ca_template_icon {
-	color:white;
+	color:#606E7F;
 	width:180px;
 	float:left;
 	display:inline-block;
-	background: linear-gradient(to bottom right,#1B1D1B,#505050);
+	background-color: #C7C5CB;
 	margin:0px;
 	height:290px;
 	padding-top:10px;
 	border-radius:20px 0px 0px 20px;
 }
-.ca_template{
-	color:black;
+.ca_template {
+	color:#606E7F;
 	border-radius:0px 20px 20px 0px;
 	display:inline-block;
 	width:370px;
-	text-align:left;
-	float:left;
+	text-align:left; 
+	float:left; 
 	overflow:auto; 
 	height:280px;
-	background: linear-gradient(to bottom right,white,#1B1D1B);
+	background-color:#EDEAEF;
 	padding:10px;
 }
 .ca_category {
 	color:purple;
 }
 .ca_author {
-	color:gray;
+	color:black;
 	font-weight:bold;
 	cursor:pointer;
+}
+.ca_applicationName {
+	color:black;
+	font-size:large;
+}
+.ca_repository {
+	color:black;
 }
 .ca_highlight {
 	color:#1e6d18;
@@ -103,15 +110,12 @@ input[type=checkbox] {
 	width:48px;
 }
 .supportLink { 
-	color:purple;
 	font-weight:bold;
 }
 .projectLink { 
-	color:purple;
 	font-weight:bold;
 }
 .webLink { 
-	color:purple;
 	font-weight:bold;
 }
 .donateLink {
