Fix: center apps if display width < 1080

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -565,7 +565,9 @@ function changePage(pageNumber) {
 
 function getWindowWidth() {
 	var width = $('.tabs').width();
-
+  if ( width <= 1080 ) {
+		width = $(window).outerWidth();
+	}
 	return width;
 }
 
